# usaspending-api

./: .codeclimate.yml  .coverage.54faa477096a.1854.XedYQnPx  .coverage.54faa477096a.751.XBDpCTex  .coverage.54faa477096a.754.XCnPWmfx  .coverage.54faa477096a.758.XdUWmEJx  .coverage.54faa477096a.762.XFkptSSx  .coverage.54faa477096a.766.Xzanaahx  .coverage.54faa477096a.770.XtBUkjFx  .coverage.54faa477096a.774.XlGdRPMx  .coverage.F7JCGGYLJT.60941.XyZsXGgx  .coverage.docker-desktop.60810.XYGclVSx  .coverage.docker-desktop.72775.XeWEYJDx  .dockerignore  .env  .env.template  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  03-03-2020_delete_records_award_0000000000.csv  CONTRIBUTING.md  Dockerfile  Dockerfile-Server  Dockerfile.download  Dockerfile.duckdb  Dockerfile.go  Dockerfile.spark  Dockerfile.testing  LICENSE  MANIFEST.in  Makefile  README-bulk.md  README.md  awards  broker_schema.dump  current_view.sql  data_changes.md  data_loading_modifications.md  data_reformatting.md  (+36 more)
.github/: CODEOWNERS  pull_request_template.md  pull_request_template_future.md
.github/workflows/: build-broker-docker-image-for-test.yaml  cancel-running-workflow.yaml  code-climate-before-build.yaml  code-climate-report-coverage.yaml  code-quality-checks.yaml  code-style-checks.yaml  determine-broker-branch.yaml  linter.yaml  linting.yaml  pull-request-and-review-updates.yaml  pull-request-checks-limit-by-target-branch.yaml  pull-request-checks.yaml  test-non-spark-integration-signal-handling.yaml  test-non-spark-integration-using-signal-handling.yaml  test-non-spark-integration.yaml  test-spark-integration-load-to-from-delta.yaml  test-spark-integration-load-transactions-fabs-fpds.yaml  test-spark-integration-load-transactions-lookup.yaml  test-spark-integration-other.yaml  test-spark-integration.yaml  test-suite.yaml  test-unit-signal-handling.yaml  test-unit.yaml
admin/: database_status.ipynb
bulk_downloads/: README.md
config/: example-config.yaml  newrelic.ini  supervisord.conf  uwsgi.ini
csv_downloads/: README.md
docker/spark/: Dockerfile
initdb/: README.md  create_users.sql  set_search_path.sql
jupyter/: Dockerfile  requirements.txt
jupyter/.jupyter/: jupyter_server_config.json
jupyter/notebooks/: dbs_to_delta.ipynb
matviews/: mv_agency_autocomplete.sql  mv_contract_award_search.sql  mv_covid_financial_account.sql  mv_directpayment_award_search.sql  mv_grant_award_search.sql  mv_idv_award_search.sql  mv_loan_award_search.sql  mv_other_award_search.sql  mv_pre2008_award_search.sql  subaward_view.sql  summary_state_view.sql  tas_autocomplete_matview.sql  transaction_search.sql
matviews/componentized/: mv_agency_autocomplete__drops.sql  mv_agency_autocomplete__indexes.sql  mv_agency_autocomplete__matview.sql  mv_agency_autocomplete__mods.sql  mv_agency_autocomplete__refresh.sql  mv_agency_autocomplete__renames.sql  mv_contract_award_search__drops.sql  mv_contract_award_search__indexes.sql  mv_contract_award_search__matview.sql  mv_contract_award_search__mods.sql  mv_contract_award_search__refresh.sql  mv_contract_award_search__renames.sql  mv_covid_financial_account__drops.sql  mv_covid_financial_account__matview.sql  mv_covid_financial_account__mods.sql  mv_covid_financial_account__refresh.sql  mv_covid_financial_account__renames.sql  mv_directpayment_award_search__drops.sql  mv_directpayment_award_search__indexes.sql  mv_directpayment_award_search__matview.sql  mv_directpayment_award_search__mods.sql  mv_directpayment_award_search__refresh.sql  mv_directpayment_award_search__renames.sql  mv_grant_award_search__drops.sql  mv_grant_award_search__indexes.sql  mv_grant_award_search__matview.sql  mv_grant_award_search__mods.sql  mv_grant_award_search__refresh.sql  mv_grant_award_search__renames.sql  mv_idv_award_search__drops.sql  mv_idv_award_search__indexes.sql  mv_idv_award_search__matview.sql  mv_idv_award_search__mods.sql  mv_idv_award_search__refresh.sql  mv_idv_award_search__renames.sql  mv_loan_award_search__drops.sql  mv_loan_award_search__indexes.sql  mv_loan_award_search__matview.sql  mv_loan_award_search__mods.sql  mv_loan_award_search__refresh.sql  (+37 more)
requirements/: caching_requirements.txt  legacy_requirements.txt  requirements-app.txt  requirements-contrib.txt  requirements-dev.txt  requirements-server.txt  requirements-testing.txt  requirements.txt  requirements_3-7.txt  server_requirements.txt
usaspending_api/: conftest.py  conftest_helpers.py  decorators.py  local_settings.example.py  pylint-test.py  settings.py  settings_databricks.py  urls.py  views.py  wsgi.py
usaspending_api/accounts/: admin.py  apps.py  helpers.py  models.py  serializers.py  test_accounts.py  urls.py  urls_budget_authority.py  urls_federal.py  urls_federal_account.py  urls_federal_account_v2.py  urls_federal_accounts_v2.py  urls_federal_obligations.py  urls_financial_balances.py  urls_financial_spending.py  urls_tas.py  views.py
usaspending_api/agencies/: README.md  apps.py
usaspending_api/agency/: urls.py
usaspending_api/api_contracts/: .gitignore  .node-version  README.md  package-lock.json  package.json  search_filters.md  template.md  template_for_get.md  template_for_post.md  tools-for-contracts.md
usaspending_api/api_docs/: urls.py
usaspending_api/app_config/: __init__.py  app_envs.py  default.py  lcl.py  local.py
usaspending_api/awards/: admin.py  apps.py  award_id_helper.py  award_type.py  models.py  models_matviews.py  recipient.py  serializers.py  test_awards.py  test_contracts_load.py  test_financialassistance_load.py  test_helpers.py  test_summary_awards.py  tests.py  urls.py  urls_award_spending.py  urls_awards.py  urls_industry_codes.py  urls_transactions.py  views.py
usaspending_api/broker/: helpers.py  lookups.py  models.py  models_old.py  serializers.py
usaspending_api/bulk_download/: bulk_download_logging.py  models.py  sqs_handler.py  sqs_work_dispatcher.py
usaspending_api/code_quality_poc/: pylint-test.py
usaspending_api/common/: aggregate_handler.py  api_request_utils.py  api_versioning.py  cache.py  cache_decorator.py  (+34 more)
(+3819 files in other folders)
