;[metadata]
;name = usaspending-api
;version = 0.0.0
;description = This API is utilized by USAspending.gov to obtain all federal spending data which is open source and provided to the public as part of the DATA Act.
;readme = file: README.md
;requires_python = >=3.7
;#license = file: LICENSE
;keywords =
;authors =
;maintainers =
;classifiers = [
;  Development Status :: 5 - Production/Stable
;  Programming Language :: Python
;  Programming Language :: Python :: 3
;  Programming Language :: Python :: 3.7
;  Programming Language :: Python :: 3 :: Only
;
;[options]
;packages = find:
;install_requires = file: requirements/requirements-app.txt
#extra_requires = dev = file: requirements/requirements-dev.txt

[tool:pytest]
DJANGO_SETTINGS_MODULE=usaspending_api.settings
addopts=--cov=usaspending_api

[flake8]
select=C,E,F,W,B,B950
ignore=E501,W503,E203,F541
exclude=.venv,usaspending_api/*/migrations/*
max-line-length=120

[coverage:run]
omit =
    # tests themselves don't need coverage measurements
    */tests/*
    # nor db migration scripts
    */migrations/*
